--- a/libs/brand/src/styles/global/buttons.scss
+++ b/libs/brand/src/styles/global/buttons.scss
@@ -2,4 +2,8 @@
   background-color: $brandColor;
   border-color: $brandColor;
   text-align: center;
+  &:disabled {
+    background: #ccc !important;
+    border: #ccc !important;
+  }
 }
