--- a/apps/team-member/src/app/components/loan-product-builder/loan-product-builder.component.scss
+++ b/apps/team-member/src/app/components/loan-product-builder/loan-product-builder.component.scss
@@ -40,6 +40,9 @@
       font-weight: 600;
       font-size: 16px;
     }
+    tr.row-highlight td {
+      background: #ffffbf;
+    }
     td,
     th {
       vertical-align: middle;
