Add sync between TM and customer forms

--- a/apps/quoting/src/app/components/quote-calculator/quote-form/quote-form.component.html
+++ b/apps/quoting/src/app/components/quote-calculator/quote-form/quote-form.component.html
@@ -13,6 +13,7 @@
         [min]="1000"
         [max]="15000"
         [step]="1000"
+        [disabled]="disabled"
       ></p-slider>
     </p>
     <div class="quote-range">
@@ -36,6 +37,7 @@
         [min]="500"
         [max]="3000"
         [step]="500"
+        [disabled]="disabled"
       ></p-slider>
     </p>
     <div class="quote-range">
@@ -53,6 +55,7 @@
         [min]="24"
         [max]="60"
         [step]="12"
+        [disabled]="disabled"
       ></p-slider>
     </p>
     <div class="quote-range">
@@ -72,6 +75,7 @@
         [min]="5"
         [max]="30"
         [step]="1"
+        [disabled]="disabled"
       ></p-slider>
     </p>
     <div class="quote-range">
@@ -87,6 +91,7 @@
         styleClass="w-100-mobile"
         formControlName="collateral"
         [options]="['Yes', 'No']"
+        [disabled]="disabled"
       ></p-selectButton>
     </p>
     <div class="quote-range"></div>
