--- a/apps/team-member/src/app/components/loan-product-builder/loan-product-builder.component.html
+++ b/apps/team-member/src/app/components/loan-product-builder/loan-product-builder.component.html
@@ -209,88 +209,99 @@
       <p-card styleClass="mb-3">
         <ng-template pTemplate="header">
           <div class="p-card-body pb-0">
-            <div class="float-end">
-              <button class="p-button" (click)="generateProducts()">
-                <lib-icons icon="plus" class="me-2"></lib-icons> Add Product
-              </button>
-            </div>
+            <div class="float-end"></div>
             <div class="p-card-title">
               <lib-icons icon="cog"></lib-icons> Create Loan Product
             </div>
           </div>
         </ng-template>
-
-        <div class="row">
-          <div class="col col-12 col-lg-7">
-            <form [formGroup]="loanProductsForm">
-              <p>Creditors (Select for payoff)</p>
-              <table class="table table-sm table-striped table-hover">
-                <tbody formArrayName="creditors">
-                  @for(creditor of teamSvc.creditors;track creditor.label; let
-                  index = $index) {
-                  <tr
-                    class="clickable"
-                    (click)="toggleFormArray('creditors', index)"
-                  >
-                    <td>
-                      <p-checkbox
-                        [formControlName]="index"
-                        [binary]="true"
-                      ></p-checkbox>
-                    </td>
-                    <td>{{ creditor.label }}</td>
-                    <td>${{ creditor.totalOwed }}</td>
-                    <td>${{ creditor.monthlyPayment }}</td>
-                  </tr>
-                  }
-                </tbody>
-              </table>
-              <p>Assets (Select for collateral)</p>
-              <table class="table table-sm table-striped table-hover">
-                <tbody formArrayName="assets">
-                  @for(asset of teamSvc.assets;track asset.label; let index =
-                  $index) {
-                  <tr
-                    class="clickable"
-                    (click)="toggleFormArray('assets', index)"
-                  >
-                    <td>
-                      <p-checkbox
-                        [formControlName]="index"
-                        [binary]="true"
-                      ></p-checkbox>
-                    </td>
-                    <td>{{ asset.label }}</td>
-                    <td>${{ asset.totalOwed }}</td>
-                  </tr>
-                  }
-                </tbody>
-              </table>
-            </form>
-          </div>
-          <div class="col col-12 col-lg-5">
-            <lib-form-generator
-              [formModel]="loanProductsModel"
-              [formGroup]="loanProductsForm"
-              [options]="formOptions"
-              [disableSubmit]="false"
-              (completed)="onFormCompleted($event)"
-            ></lib-form-generator>
-          </div>
-        </div>
-        <hr />
-        <div class="d-flex" style="justify-content: space-between">
-          <button
-            class="p-button p-button-outlined me-2"
-            (click)="openNonCreditModal()"
-          >
-            <lib-icons icon="creditcard" class="me-2"></lib-icons> Select
-            Non-Credit Products
-          </button>
-          <button class="p-button" (click)="generateProducts()">
-            <lib-icons icon="plus" class="me-2"></lib-icons> Add Product
-          </button>
-        </div>
+        <p-tabView>
+          <p-tabPanel header="Autogenerate Quote">
+            <div class="px-3">
+              <p><em>Customer loan preferences</em></p>
+              <lib-quote-form
+                [disabled]="true"
+                [formDefaults]="state.customerPreferences"
+              ></lib-quote-form>
+              <button class="p-button" (click)="generateAllProducts()">
+                Autogenerate Quote
+              </button>
+            </div>
+          </p-tabPanel>
+          <p-tabPanel header="Create Custom Quote">
+            <div class="row">
+              <div class="col col-12 col-lg-7">
+                <form [formGroup]="loanProductsForm">
+                  <p>Creditors (Select for payoff)</p>
+                  <table class="table table-sm table-striped table-hover">
+                    <tbody formArrayName="creditors">
+                      @for(creditor of teamSvc.creditors;track creditor.label;
+                      let index = $index) {
+                      <tr
+                        class="clickable"
+                        (click)="toggleFormArray('creditors', index)"
+                      >
+                        <td>
+                          <p-checkbox
+                            [formControlName]="index"
+                            [binary]="true"
+                          ></p-checkbox>
+                        </td>
+                        <td>{{ creditor.label }}</td>
+                        <td>${{ creditor.totalOwed }}</td>
+                        <td>${{ creditor.monthlyPayment }}</td>
+                      </tr>
+                      }
+                    </tbody>
+                  </table>
+                  <p>Assets (Select for collateral)</p>
+                  <table class="table table-sm table-striped table-hover">
+                    <tbody formArrayName="assets">
+                      @for(asset of teamSvc.assets;track asset.label; let index
+                      = $index) {
+                      <tr
+                        class="clickable"
+                        (click)="toggleFormArray('assets', index)"
+                      >
+                        <td>
+                          <p-checkbox
+                            [formControlName]="index"
+                            [binary]="true"
+                          ></p-checkbox>
+                        </td>
+                        <td>{{ asset.label }}</td>
+                        <td>${{ asset.totalOwed }}</td>
+                      </tr>
+                      }
+                    </tbody>
+                  </table>
+                </form>
+              </div>
+              <div class="col col-12 col-lg-5">
+                <lib-form-generator
+                  [formModel]="loanProductsModel"
+                  [formGroup]="loanProductsForm"
+                  [options]="formOptions"
+                  [disableSubmit]="false"
+                  (completed)="onFormCompleted($event)"
+                ></lib-form-generator>
+              </div>
+            </div>
+            <hr />
+            <div class="d-flex" style="justify-content: space-between">
+              <button
+                class="p-button p-button-outlined me-2"
+                (click)="openNonCreditModal()"
+              >
+                <lib-icons icon="creditcard" class="me-2"></lib-icons> Select
+                Non-Credit Products
+              </button>
+              <button class="p-button" (click)="generateProducts()">
+                <lib-icons icon="plus" class="me-2"></lib-icons> Add Product
+              </button>
+            </div>
+          </p-tabPanel>
+        </p-tabView>
       </p-card>
     </div>
   </div>
